--- a/templates/main.html
+++ b/templates/main.html
@@ -13,8 +13,8 @@
 
 		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 			<ul class="nav navbar-nav navbar-right">
-				<li><a href="#">Надати текстом</a></li>
-				<li><a href="#">Завантажити у форматі PDF</a></li>
+				<li><a href="#" class="gettxt">Надати текстом</a></li>
+				<li><a href="#" class="getpdf">Завантажити у форматі PDF</a></li>
 			</ul>
 		</div>
 	</div>
