--- a/templates/project.html
+++ b/templates/project.html
@@ -6,13 +6,15 @@
 		<h6 class="project-name">Проект <%= name %></h6>
 	</div>
 	<div class="col-md-1">
-		<div class="btn-group-vertical">
-			<a class="btn btn-default add-block" data-type="square" href="#" title="Додати блок прямокутної форми"><i class="fa fa-square-o fa-2x"></i></a>
-			<a class="btn btn-default add-block" data-type="circle" href="#" title="Додати блок овальної форми"><i class="fa fa-circle-o fa-2x"></i></a>
-			<a class="btn btn-default add-block" data-type="image" href="#" title="Додати зображення"><i class="fa fa-file-image-o fa-2x"></i></a>
-			<a class="btn btn-default add-block" data-type="smile" href="#" title="Додати посмішку"><i class="fa fa-smile-o fa-2x"></i></a>
-			<a class="btn btn-danger btn-clear" href="#" title="Почати з чистого аркушу"><i class="fa fa-file-o fa-2x"></i></a>
-			<a class="btn btn-danger btn-remove" href="#" title="Зона знищення блоків. Перетягніть непотрібний блок на цю кнопку."><i class="fa fa-remove fa-2x"></i></a>
+		<div class="toolbar">
+			<div class="btn-group-vertical">
+				<a class="btn btn-default add-block" data-type="square" href="#" title="Додати блок прямокутної форми"><i class="fa fa-square-o fa-2x"></i></a>
+				<a class="btn btn-default add-block" data-type="circle" href="#" title="Додати блок овальної форми"><i class="fa fa-circle-o fa-2x"></i></a>
+				<a class="btn btn-default add-block" data-type="image" href="#" title="Додати зображення"><i class="fa fa-file-image-o fa-2x"></i></a>
+				<a class="btn btn-default add-block" data-type="smile" href="#" title="Додати посмішку"><i class="fa fa-smile-o fa-2x"></i></a>
+				<a class="btn btn-danger btn-clear" href="#" title="Почати з чистого аркушу"><i class="fa fa-file-o fa-2x"></i></a>
+				<a class="btn btn-danger btn-remove" href="#" title="Зона знищення блоків. Перетягніть непотрібний блок на цю кнопку."><i class="fa fa-remove fa-2x"></i></a>
+			</div>
 		</div>
 	</div>
 </div>
